--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Gov 50 Final Project"
 author: Adithya Madduri
-description: "My final project"
+description: "Analysis of impact of Teacher Pay on Student SAT scores"
 output:
   distill::distill_article:
     self_contained: false
@@ -25,6 +25,7 @@ Do higher teacher salaries contribute to enhanced student academic outcomes? In 
 library(tidyverse)
 library(readr)
 data_final <- read_csv("MA_Public_Schools_2017.csv")
+View(data_final)
 
 ```
 ```{r}
@@ -35,41 +36,88 @@ data_highschool <- data_final |>
 library(ggplot2)
 
 data_highschool <- data_highschool |>
-  mutate(Total_SAT = `Average SAT_Reading` + `Average SAT_Writing` + `Average SAT_Math`)
+  mutate(Average_SAT = `Average SAT_Reading` + `Average SAT_Writing` + `Average SAT_Math`)
 ggplot(data = data_highschool,
        mapping = aes(x = `Average In-District Expenditures per Pupil`,
-                     y = Total_SAT)) +
+                     y = Average_SAT)) +
   geom_point() + geom_smooth(method = "lm", se = FALSE)
 ```
 ```{r}
 ggplot(data = data_highschool,
        mapping = aes(x = `Salary Totals`,
-                     y = Total_SAT/100)) +
+                     y = Average_SAT)) +
   geom_point() + geom_smooth(method = "lm", se = FALSE) +
   scale_x_log10()
 ```
+```{r}
+ggplot(data = data_highschool,
+       mapping = aes(x = `Average Salary`,
+                     y = Average_SAT)) +
+  geom_point() + geom_smooth(method = "lm", se = FALSE) +
+  scale_x_log10()
+```
+
+
 ## Milestone 4
 ```{r}
 library(tidyverse)
 first_tibble <- data_highschool |>
-  group_by(`Salary Totals`) |>
-  summarize(avg_SAT = mean(Total_SAT))
+  group_by(`Average Salary`) |>
+  summarize(avg_SAT = mean(Average_SAT))
 
 first_tibble
 
 
 
 most_paid <- first_tibble |>
-  slice_max(`Salary Totals`, n = 5)
+  slice_max(`Average Salary`, n = 5)
 
 most_paid
 
 
 least_paid <- first_tibble |>
-  slice_min(`Salary Totals`, n = 5)
+  slice_min(`Average Salary`, n = 5)
 
 least_paid
 ```
 Looking at the data for the 5 highest and 5 lowest salary totals by district, we can see that SAT scores tend to be lower when salary totals are higher. From this data, for furtehr analysis, I need to clear out salary total values for districts that do not have an average SAT score. 
 
 Looking at this tibble and the previous two charts, it appears that a higher salary total for teachers is correlated with lower SAT test scores. This can be seen from the negative line of best fit on the second scatter plot. The negative slope on the line means indicatest that the correlation between salary totals and SAT test scores is negative. Therefore, as teacher salary totals increase, we would expect to see lower SAT test scores. 
+
+```{r}
+fit <- lm(`Average Salary` ~ Average_SAT, data = data_highschool)
+fit
+coef(fit)
+```
+In the above code, I ran a linear regression so that we could get a clearer picture of the relationship between average Salary and Average SAT scores. As we can see from the coefficients for the linear regression, looking at all high schools in the state of Massachusetts for the year 2017, as average Salary increases the average SAT score for the district decreases by 4 points. This suggests a correlation, but does not necesarily imply a causual effect. There could be many other factors influencing student SAT scores outside of teacher pay. 
+
+```{r}
+data_highschool <- data_highschool |>
+  mutate(
+    pay_range = case_when(
+      `Average Salary` < 65000 ~ "Under 65,000",
+      `Average Salary` <=70000 & 'Average Salary' > 65000 ~ "Between 65,000 and 70,000",
+      `Average Salary` <=75000 & 'Average Salary' > 70000 ~ "Between 70,000 and 75,000",
+      `Average Salary` <=80000 & 'Average Salary' > 75000 ~ "Between 75,000 and 80,000",
+      `Average Salary` <=85000 & 'Average Salary' > 80000 ~ "Between 80,000 and 85,000",
+      `Average Salary` <=90000 & 'Average Salary' > 85000 ~ "Between 85,000 and 90,000",
+      `Average Salary` <=95000 & 'Average Salary' > 90000 ~ "Between 90,000 and 95,000",
+      `Average Salary` >=95000 ~ "Greater than 95,000"
+    )
+  )
+data_highschool |>
+  group_by(pay_range) |>  
+  summarize(avg_SAT = mean(Average_SAT, na.rm = TRUE))
+
+```
+In this chart, we grouped the average salaries into 9 different categories. under $65,000; between $65,000 to 70,000; $70,000 to 75,000; $75,000 to 80,000; $80,000 to 85,000; $85,000 to 90,000; $90,000 to 95,000; and greater than $95,000. We then calculated the average SAT scores for each of these pay ranges. This again allows us to better understand the correlation between our two data columns. 
+
+
+
+
+Results and Potential Explanations:
+
+Possible Confounding Factors:
+
+Conclusions:
+From the data it is clear that there was a negative correlation between teacher salaries and average SAT scores for high schools in the state of Massachusetts for the year 2017. 
