--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Gov 50 Final Project"
 author: Adithya Madduri
-description: "Analysis of impact of Teacher Pay on Student SAT scores for Massachusetts Public High Schools in 2017"
+description: "Analysis of Impact of Teacher Pay on Student SAT scores for Massachusetts Public High Schools in 2017"
 output:
   distill::distill_article:
     self_contained: false
@@ -28,11 +28,12 @@ data_final <- read_csv("MA_Public_Schools_2017.csv")
 View(data_final)
 
 ```
-```{r}
+```{r Filtering Dataset}
 data_highschool <- data_final |>
   filter(`12_Enrollment` >= 1 | `11_Enrollment` >= 1 | `10_Enrollment` >= 1 | `9_Enrollment` >= 1)
+##In this chunk, I filter the MA Public Schools data inorder to just get schools with High schoolers enrolled
 ```
-```{r}
+```{r Scatter Plot of Average SAT Score compared to Expenditures per Pupil}
 library(ggplot2)
 
 data_highschool <- data_highschool |>
@@ -40,26 +41,41 @@ data_highschool <- data_highschool |>
 ggplot(data = data_highschool,
        mapping = aes(x = `Average In-District Expenditures per Pupil`,
                      y = Average_SAT)) +
-  geom_point() + geom_smooth(method = "lm", se = FALSE)
+  geom_point() + geom_smooth(method = "lm", se = FALSE) +
+  labs(x = "Average In-Disctrict Expenditures per Pupil",
+       y = "Average SAT Score",
+       title = "Average SAT Score compared to Expenditures per Pupil",
+       subtitle = "Among MA Public highschools",
+       source = "Massachusetts Public School Data, 2017")
 ```
-```{r}
+```{r Scatter plot of Average SAT Score compared to Salary Totals per school}
 ggplot(data = data_highschool,
        mapping = aes(x = `Salary Totals`,
                      y = Average_SAT)) +
   geom_point() + geom_smooth(method = "lm", se = FALSE) +
-  scale_x_log10()
+  scale_x_log10() +
+  labs(x = "Salary Totals for School",
+       y = "Average SAT Score",
+       title = "Average SAT Score compared to Salary Totals per school",
+       subtitle = "Among MA Public highschools",
+       source = "Massachusetts Public School Data, 2017")
 ```
-```{r}
+```{r Scatter Plot of Average SAT score compared to Average Salary}
 ggplot(data = data_highschool,
        mapping = aes(x = `Average Salary`,
                      y = Average_SAT)) +
   geom_point() + geom_smooth(method = "lm", se = FALSE) +
-  scale_x_log10()
+  scale_x_log10() +
+  labs(x = "Average Salary per school",
+       y = "Average SAT Score",
+       title = "Average SAT score compared to Average Salary",
+       subtitle = "Among MA Public highschools",
+       source = "Massachusetts Public School Data, 2017")
 ```
 
 
 ## Milestone 4
-```{r}
+```{r SAT Scores for Minimum and Maximum Pay}
 library(tidyverse)
 first_tibble <- data_highschool |>
   group_by(`Average Salary`) |>
@@ -79,19 +95,24 @@ least_paid <- first_tibble |>
   slice_min(`Average Salary`, n = 5)
 
 least_paid
+
+##In this code, we are collecting the 5 schools with the highest average salary and the 5 schools with the lowest average salary, and gettinng the average SAT score at each of those schools.
 ```
-Looking at the data for the 5 highest and 5 lowest salary totals by district, we can see that SAT scores tend to be lower when salary totals are higher. From this data, for furtehr analysis, I need to clear out salary total values for districts that do not have an average SAT score. 
+Looking at the data for the 5 highest and 5 lowest salary totals by district, we can see that SAT scores tend to be lower when salary totals are higher. From this data, for further analysis, I need to clear out salary total values for districts that do not have an average SAT score. 
 
-Looking at this tibble and the previous two charts, it appears that a higher salary total for teachers is correlated with lower SAT test scores. This can be seen from the negative line of best fit on the second scatter plot. The negative slope on the line means indicatest that the correlation between salary totals and SAT test scores is negative. Therefore, as teacher salary totals increase, we would expect to see lower SAT test scores. 
+Looking at this tibble and the previous two charts, it appears that a higher salary total for teachers is correlated with lower SAT test scores. This can be seen from the negative line of best fit on the second scatter plot. The negative slope on the line means indicates that the correlation between salary totals and SAT test scores is negative. Therefore, as teacher salary totals increase, we would expect to see lower SAT test scores. 
 
-```{r}
+```{r Linear Coefficient Calculation}
 fit <- lm(`Average Salary` ~ Average_SAT, data = data_highschool)
-fit
 coef(fit)
+modelsummary::modelsummary(fit,
+                           statistic = c("s.e. = {std.error}",
+                                         "p = {p.value}"),
+                           gof_map = c("nobs", "r.squared", "adj.r.squared"))
 ```
-In the above code, I ran a linear regression so that we could get a clearer picture of the relationship between average Salary and Average SAT scores. As we can see from the coefficients for the linear regression, looking at all high schools in the state of Massachusetts for the year 2017, as average Salary increases the average SAT score for the district decreases by 4 points. This suggests a correlation, but does not necesarily imply a causual effect. There could be many other factors influencing student SAT scores outside of teacher pay. 
+In the above code, I ran a linear regression so that we could get a clearer picture of the relationship between average Salary and Average SAT scores. As we can see from the coefficients for the linear regression, looking at all high schools in the state of Massachusetts for the year 2017, as average Salary increases the average SAT score for the high school decreases by roughly 4.4 points. This suggests a correlation, but does not necesarily imply a causual effect. There could be many other factors influencing student SAT scores outside of teacher pay. 
 
-```{r}
+```{r Averge SAT Score per Pay Range}
 data_highschool <- data_highschool |>
   mutate(
     pay_range = case_when(
@@ -105,9 +126,11 @@ data_highschool <- data_highschool |>
       `Average Salary` >=95000 ~ "Greater than 95,000"
     )
   )
-data_highschool |>
+sat_payrange <- data_highschool |>
   group_by(pay_range) |>  
   summarize(avg_SAT = mean(Average_SAT, na.rm = TRUE))
+
+knitr::kable(sat_payrange, col.names = c("Pay Range", "Average SAT Score"))
 
 ```
 In this chart, we grouped the average salaries into 9 different categories. under $65,000; between $65,000 to 70,000; $70,000 to 75,000; $75,000 to 80,000; $80,000 to 85,000; $85,000 to 90,000; $90,000 to 95,000; and greater than $95,000. We then calculated the average SAT scores for each of these pay ranges. This again allows us to better understand the correlation between our two data columns. 
