--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Gov 50 Final Project"
+title: "Gov 50 Final Project by Adithya Madduri"
 author: Adithya Madduri
 description: "Analysis of Impact of Teacher Pay on Student SAT scores for Massachusetts Public High Schools in 2017"
 output:
@@ -11,38 +11,123 @@ output:
 
 ## Introduction
 
-Do higher teacher salaries contribute to enhanced student academic outcomes? In this study, I plan to examine how higher teacher salaries contribute to student academic outcomes. I hypothesize that higher teacher salaries will contribute to better student academic outcomes since teachers will be more committed to educating their students, contributing to better classroom instruction, and therefore better educational outcomes for the students. When teachers are paid less, I believe that they will be less committed to their jobs, and this will mean that students receive a lower quality of education and will likely mean that the future educational outcomes of the students are worse. The data source I’m using is the Massachusetts Public School Data for the year 2017, and my sample size is 1800 Public schools in Massachusetts, including elementary, middle, and high schools. My unit of analysis is an individual school, for example Abington high school. The explanatory variables of interest are average salary and total salary. The variable will be measured in United States Dollars. My outcome variables include various measures of academic performance, specifically average SAT Math and Reading scores for students from the school and the number of high school graduates from the school. For instance, if the average salary variable was equal to $45,000, that means that the average teacher salary was $45,000. Likewise for the outcome variable, if the average  SAT Math score for a school is 700, this corresponds to This data is taken from the Massachusetts Public School data for the year 2017 and its validity is established by the fact that it comes directly from the Massachusetts Department of Elementary and Secondary Education. If I observe higher average SAT scores and high school graduation rates when teacher pay is higher, then that will mean that higher teacher pay does correspond to better educational outcomes for students. However, if I observe that average SAT scores and graduation rates are not significantly higher when teacher pay is higher, then that will mean that teacher pay does not have a significant impact on educational outcomes. When I run a regression of average SAT scores and high school graduation rates on average teacher salary as an indicator variable a positive, significant coefficient would indicate support of my hypothesis.
+Do higher teacher salaries contribute to enhanced student academic performance? In this study, I plan to examine how higher teacher salaries contribute to student academic outcomes(for this study academic outcomes will be measured by SAT scores since the SAT is seen as a national benchmark examination to gauge student academic performance). I hypothesize that higher teacher salaries will contribute to better student academic outcomes since teachers will be more committed to educating their students, contributing to better classroom instruction, and therefore better educational outcomes for the students. When teachers are paid less, I believe that they will be less committed to their jobs, and this will mean that students receive a lower quality of education and will likely mean that the future educational outcomes of the students are worse. The data source I’m using is the Massachusetts Public School Data for the year 2017, and my sample size is 1800 Public schools in Massachusetts, including elementary, middle, and high schools. My unit of analysis is an individual school, for example Abington high school. The explanatory variables of interest are average salary and total salary. The variable will be measured in United States Dollars. My outcome variables include various measures of academic performance, specifically average SAT Math and Reading scores for students from the school and the number of high school graduates from the school. For instance, if the average salary variable was equal to $45,000, that means that the average teacher salary was $45,000. Likewise for the outcome variable, if the average  SAT Math score for a school is 700, this corresponds to an average SAT math score of 700. This data is taken from the Massachusetts Public School data for the year 2017 and its validity is established by the fact that it comes directly from the Massachusetts Department of Elementary and Secondary Education. If I observe higher average SAT scores when teacher pay is higher, then that will mean that higher teacher pay does correspond to better educational outcomes for students. However, if I observe that average SAT scores and graduation rates are not significantly higher when teacher pay is higher, then that will mean that teacher pay does not have a significant impact on educational outcomes. When I run a regression of average SAT scores and high school graduation rates on average teacher salary as an indicator variable a positive, significant coefficient would indicate support of my hypothesis.
 
 
 ## Data
 
-```{r}
+```{r Loading Data Package}
 library(tidyverse)
 library(readr)
 data_final <- read_csv("MA_Public_Schools_2017.csv")
-View(data_final)
 
 ```
 ```{r Filtering Dataset}
 data_highschool <- data_final |>
   filter(`12_Enrollment` >= 1 | `11_Enrollment` >= 1 | `10_Enrollment` >= 1 | `9_Enrollment` >= 1)
-##In this chunk, I filter the MA Public Schools data inorder to just get schools with High schoolers enrolled
+##In this chunk, I filter the MA Public Schools data in order to just get schools with High school students enrolled since those are the only students that will be taking the SAT, which is the metric I am using for student performance.
 ```
+
+
+```{r Scatter Plot of Average SAT score compared to Average Salary}
+library(ggplot2)
+ggplot(data = data_highschool,
+       mapping = aes(x = `Average Salary`,
+                     y = Average_SAT)) +
+  geom_point() + geom_smooth(method = "lm", se = FALSE) +
+  scale_x_log10() +
+  labs(x = "Average Salary per school",
+       y = "Average SAT Score",
+       title = "Average SAT score compared to Average Salary",
+       subtitle = "Among MA Public highschools",
+       source = "Massachusetts Public School Data, 2017")
+```
+In this section, I've created scatter plot of Average SAT score compared to the Average salary per school overlaid with a line of best fit for the data. Looking at just the data points on the scatter plot, it appears that there is little correlation between the two variables. However, when we overlay the scatter plot with a line of best fit, we can see that there is a negative correlation between average salary per school and the average SAT score. The negative slope on the line means indicates that the correlation between salary totals and SAT test scores is negative. Therefore, as teacher salary totals increase, we would expect to see lower SAT test scores. One note is that this line of best fit is likely skewed by the presence of certain outlier values both those with very high SAT scores and those with very low SAT scores. Looking at the plot, it seems that if these outlier points were eliminated, the line of best fit would be close to linear. This suggests that at least there is no increase or improvement in SAT scores as the average teacher salary per school increases. However, with the outlier data points left in the dataset, it appears that there is a negative relationship between Average Teacher Salary and Average SAT score. Therefore, the data suggest that student SAT performance is negatively affected by increasing teacher salaries.
+
+## Results
+```{r SAT Scores for Minimum and Maximum Pay}
+library(tidyverse)
+salary_tible <- data_highschool |>
+  group_by(`Average Salary`) |>
+  summarize(avg_SAT = mean(Average_SAT))
+
+
+
+most_paid <- salary_tibble |>
+  slice_max(`Average Salary`, n = 5)
+
+knitr::kable(most_paid, col.names = c("5 Highest Average Salaries in dollars", "Associated Average SAT Score"), digits = 0)
+
+
+least_paid <- salary_tibble |>
+  slice_min(`Average Salary`, n = 5)
+
+knitr::kable(least_paid, col.names = c("5 Lowest Average Salaries in dollars", "Associated Average SAT Score"), digits = 0)
+
+
+
+##In this code, we are collecting the 5 schools with the highest average salary and the 5 schools with the lowest average salary, and gettinng the average SAT score at each of those schools.
+```
+Looking at the data for the 5 highest and 5 lowest average salaries by school, we can see that schools with the 5 highest average salaries tend to have higher average SAT scores than districts than schools with the 5 lowest average salaries. This points to the need for further analysis of the data, since this does not conclusively suppourt the relationship we found in the previous scatter plot.
+
+```{r Linear Coefficient Calculation}
+fit <- lm(`Average Salary` ~ Average_SAT, data = data_highschool)
+coef(fit)
+modelsummary::modelsummary(fit,
+                           statistic = c("s.e. = {std.error}",
+                                         "p = {p.value}"),
+                           gof_map = c("nobs", "r.squared", "adj.r.squared"))
+```
+In the above code, I ran a linear regression so that we could get a clearer picture of the relationship between average Salary and Average SAT scores. As we can see from the coefficients for the linear regression, looking at all high schools in the state of Massachusetts for the year 2017, as average Salary increases the average SAT score for the high school decreases by roughly 4.4 points. This suggests a correlation, but does not necessarily imply a causal effect, we simply know that higher average teacher salaries are linked with lower average SAT scores. There could be many other factors influencing student SAT scores outside of teacher pay. 
+
+```{r Averge SAT Score per Pay Range}
+data_highschool <- data_highschool |>
+  mutate(
+    pay_range = case_when(
+      `Average Salary` < 65000 ~ "Under $65,000",
+      `Average Salary` <=70000 & 'Average Salary' > 65000 ~ "Between $65,000 and 70,000",
+      `Average Salary` <=75000 & 'Average Salary' > 70000 ~ "Between $70,000 and 75,000",
+      `Average Salary` <=80000 & 'Average Salary' > 75000 ~ "Between $75,000 and 80,000",
+      `Average Salary` <=85000 & 'Average Salary' > 80000 ~ "Between $80,000 and 85,000",
+      `Average Salary` <=90000 & 'Average Salary' > 85000 ~ "Between $85,000 and 90,000",
+      `Average Salary` <=95000 & 'Average Salary' > 90000 ~ "Between $90,000 and 95,000",
+      `Average Salary` >=95000 ~ "Greater than $95,000"
+    )
+  )
+sat_payrange <- data_highschool |>
+  group_by(pay_range) |>  
+  summarize(avg_SAT = mean(Average_SAT, na.rm = TRUE))
+
+knitr::kable(sat_payrange, col.names = c("Pay Range", "Average SAT Score"), digits = 0)
+
+```
+In this chart, we grouped the average salaries into 9 different categories. under $65,000; between $65,000 to 70,000; $70,000 to 75,000; $75,000 to 80,000; $80,000 to 85,000; $85,000 to 90,000; $90,000 to 95,000; and greater than $95,000. We then calculated the average SAT scores for each of these pay ranges. This again allows us to better understand the correlation between our two data columns, average teacher pay and average student SAT scores. From this section, it becomes a little bit more clear that the relationship between average SAT scores and average teacher salary is not strictly linear. As the average salary range increases teacher pay tends to fluctuate, with periodic spikes. I believe that spikes could be skewing some of the data. For instance, there is a major drop in average SAT in the pay range between $85,000 and 90,000. This is major drop compared to the other pay ranges around it, since all the pay pervious pay ranges $80,000 to 85,000 and $75,000 to 80,000 both had average SAT scores around 1500. This drop is difficult to explain both in terms of the data and in the context of the study, and further investigation might be needed to see what causes this drop. Overall, from the data for Public High Schools in Massachusetts in 2017, it is clear that in general, higher average teacher salary values are associated with lower values for average SAT scores. These results contradict my hypothesis that higher teacher salaries would contribute to better student academic performance since an examination of the data shows that higher average teacher salaries correlate to worser student outcomes in terms of average SAT scores.
+
+## Potential Explanations of Results
+Next, we should look at some possible factors that could explain this negative correlation between average teacher salary values and average SAT scores. One potential factor could be that areas with schools that are known for being difficult to teach might have to pay teachers more to work at those schools whilst still having low SAT scores. Furthermore, it could be that low SAT scores mean that schools must pay teachers more in an effort to boost student performance. An additional factor could be that some dsitricts have budget constrains that mean that paying higher average teacher salaries means they are unable to invest in other educational resources and this could be why student outcomes are not improving. 
+
+
+## Possible Confounding Factors
+One possible confounding factor is that not all schools use SAT scores as a primary benchmark for student achievement, though it is the national standard for high school student achievement hence why it was chosen as the response variable for this study. It could be that some schools prioritize ACT scores, and only a select few students take SAT exams, contributing to lower or higher than anticipated average SAT scores. Furthermore, it could be that this issue is more systematic than can be explained by just average teacher salary. Below, I created two visualizations of Average SAT scores compared to Average In-District Expenditures per Pupil and Salary Totals per School. These visualizations are important because they show that average SAT scores having a negative correlation with average teacher salaries is not an anomaly but rather part of a larger trend where spending more on education(at least in the context of this data set) corresponds to decreased average SAT scores and thus worser average SAT performance.
+
 ```{r Scatter Plot of Average SAT Score compared to Expenditures per Pupil}
 library(ggplot2)
 
 data_highschool <- data_highschool |>
   mutate(Average_SAT = `Average SAT_Reading` + `Average SAT_Writing` + `Average SAT_Math`)
+
 ggplot(data = data_highschool,
        mapping = aes(x = `Average In-District Expenditures per Pupil`,
                      y = Average_SAT)) +
   geom_point() + geom_smooth(method = "lm", se = FALSE) +
   labs(x = "Average In-Disctrict Expenditures per Pupil",
        y = "Average SAT Score",
-       title = "Average SAT Score compared to Expenditures per Pupil",
+       title = "Average SAT Score compared to Expenditures per Pupil in dollars",
        subtitle = "Among MA Public highschools",
        source = "Massachusetts Public School Data, 2017")
 ```
+This is analysis again shows a negative correlation, this time between average in-district expenditures per pupil and average SAT scores. This suggests Average SAT scores are not being improved by increasing expenditures per pupil, and expand on the relationship between average teacher salaries and average SAT scores explored through the rest of the project. This visualization suggests that simply spending more on students' education is not an effective strategy for raising average SAT scores, and is actually correlated with lower average SAT scores.
+
 ```{r Scatter plot of Average SAT Score compared to Salary Totals per school}
 ggplot(data = data_highschool,
        mapping = aes(x = `Salary Totals`,
@@ -55,86 +140,7 @@ ggplot(data = data_highschool,
        subtitle = "Among MA Public highschools",
        source = "Massachusetts Public School Data, 2017")
 ```
-```{r Scatter Plot of Average SAT score compared to Average Salary}
-ggplot(data = data_highschool,
-       mapping = aes(x = `Average Salary`,
-                     y = Average_SAT)) +
-  geom_point() + geom_smooth(method = "lm", se = FALSE) +
-  scale_x_log10() +
-  labs(x = "Average Salary per school",
-       y = "Average SAT Score",
-       title = "Average SAT score compared to Average Salary",
-       subtitle = "Among MA Public highschools",
-       source = "Massachusetts Public School Data, 2017")
-```
+This last scatter plot represents the salary totals for teachers on the x-axis rather than just the average salary. This helps to provide a clearer picture of how much a school actually spends on paying its teachers and how that correlates with average SAT scores for that school. This graph also shows a negative correlation, which supports the overall idea that simply spending more to educate students is not an effective strategy for boosting SAT performance.
 
-
-## Results
-```{r SAT Scores for Minimum and Maximum Pay}
-library(tidyverse)
-first_tibble <- data_highschool |>
-  group_by(`Average Salary`) |>
-  summarize(avg_SAT = mean(Average_SAT))
-
-first_tibble
-
-
-
-most_paid <- first_tibble |>
-  slice_max(`Average Salary`, n = 5)
-
-most_paid
-
-
-least_paid <- first_tibble |>
-  slice_min(`Average Salary`, n = 5)
-
-least_paid
-
-##In this code, we are collecting the 5 schools with the highest average salary and the 5 schools with the lowest average salary, and gettinng the average SAT score at each of those schools.
-```
-Looking at the data for the 5 highest and 5 lowest salary totals by district, we can see that SAT scores tend to be lower when salary totals are higher. From this data, for further analysis, I need to clear out salary total values for districts that do not have an average SAT score. 
-
-Looking at this tibble and the previous two charts, it appears that a higher salary total for teachers is correlated with lower SAT test scores. This can be seen from the negative line of best fit on the second scatter plot. The negative slope on the line means indicates that the correlation between salary totals and SAT test scores is negative. Therefore, as teacher salary totals increase, we would expect to see lower SAT test scores. 
-
-```{r Linear Coefficient Calculation}
-fit <- lm(`Average Salary` ~ Average_SAT, data = data_highschool)
-coef(fit)
-modelsummary::modelsummary(fit,
-                           statistic = c("s.e. = {std.error}",
-                                         "p = {p.value}"),
-                           gof_map = c("nobs", "r.squared", "adj.r.squared"))
-```
-In the above code, I ran a linear regression so that we could get a clearer picture of the relationship between average Salary and Average SAT scores. As we can see from the coefficients for the linear regression, looking at all high schools in the state of Massachusetts for the year 2017, as average Salary increases the average SAT score for the high school decreases by roughly 4.4 points. This suggests a correlation, but does not necessarily imply a causal effect. There could be many other factors influencing student SAT scores outside of teacher pay. 
-
-```{r Averge SAT Score per Pay Range}
-data_highschool <- data_highschool |>
-  mutate(
-    pay_range = case_when(
-      `Average Salary` < 65000 ~ "Under 65,000",
-      `Average Salary` <=70000 & 'Average Salary' > 65000 ~ "Between 65,000 and 70,000",
-      `Average Salary` <=75000 & 'Average Salary' > 70000 ~ "Between 70,000 and 75,000",
-      `Average Salary` <=80000 & 'Average Salary' > 75000 ~ "Between 75,000 and 80,000",
-      `Average Salary` <=85000 & 'Average Salary' > 80000 ~ "Between 80,000 and 85,000",
-      `Average Salary` <=90000 & 'Average Salary' > 85000 ~ "Between 85,000 and 90,000",
-      `Average Salary` <=95000 & 'Average Salary' > 90000 ~ "Between 90,000 and 95,000",
-      `Average Salary` >=95000 ~ "Greater than 95,000"
-    )
-  )
-sat_payrange <- data_highschool |>
-  group_by(pay_range) |>  
-  summarize(avg_SAT = mean(Average_SAT, na.rm = TRUE))
-
-knitr::kable(sat_payrange, col.names = c("Pay Range", "Average SAT Score"))
-
-```
-In this chart, we grouped the average salaries into 9 different categories. under $65,000; between $65,000 to 70,000; $70,000 to 75,000; $75,000 to 80,000; $80,000 to 85,000; $85,000 to 90,000; $90,000 to 95,000; and greater than $95,000. We then calculated the average SAT scores for each of these pay ranges. This again allows us to better understand the correlation between our two data columns, average teacher pay and average student SAT scores. From this section, it becomes a little bit more clear that the relationship between average SAT scores and average teacher salary is not strictly linear. As the average salary range increases teacher pay tends to fluctuate, with periodic spikes. I believe that spikes could be skewing some of the data. For instance, there is a major drop in average SAT in the pay range between $85,000 and 90,000. This is major drop compared to the other pay ranges around it, since all the pay pervious pay ranges $80,000 to 85,000 and $75,000 to 80,000 both had average SAT scores around 1500. This drop is difficult to explain both in terms of the data and in the context of the study, and further investigation might be needed to see what causes this drop.
-Overall, from the data for Public High Schools in Massachusetts in 2017, it is clear that in general, higher average teacher salary values are associated with lower 
-
-
-Explanations of Results: From the results
-
-Possible Confounding Factors: One possible confounding factor is that not all schools use SAT scores as a primary benchmark for student achievement, though it is the national standard for high school student achievement hence why it was chosen as the response variable for this study. It could be that some schools prioritize ACT scores, and only a select few students take SAT exams, contributing to lower or higher than anticipated average SAT scores.
-
-Conclusions:
-From the data it is clear that there was a negative correlation between teacher salaries and average SAT scores for Public high schools in the state of Massachusetts for the year 2017. 
+## Conclusions
+From the data it is clear that there was a negative correlation between teacher salaries and average SAT scores for Public high schools in the state of Massachusetts for the year 2017. Though this data set represents just one state's public high schools in a single school year, the data still points to an interesting, if slightly troubling, conclusion. With that being said, its important to not firstly that correlation does not imply that there is a causal relationship between the two variables. There are some potential explanations for why this data is the way it is, which I discussed in the explanation of results section. Overall, I was able to answer my initial research question which was "Do higher teacher salaries contribute to enhanced student academic performance?". In my study, I used student SAT scores as a benchmark for academic performance compared average SAT scores to average teacher salaries. The findings from my study did not support my initial hypothesis that higher teacher salaries would contribute to better student SAT performance. This finding surprised me since funding is a topic that is frequently at the forefront of education policy. From this data, we can see that there are a multitude of factors contributing to student performance and that simply raising teacher salaries(or raising in district expenditures as shown in the confounding variables section) might not be enough to improve student SAT scores.
